# Asistence-Bot

./: .env.example  .env.production  .gitignore  00_START_HERE.md  ARRANCA.bat  AUDITORIA_CORRECTIVA.md  AUDITORIA_INFORME.docx  AUDITORIA_INFORME.txt  CLIENT_ONBOARDING_CHECKLIST.md  CODE_EXPORT.json  CODIGO_COMPLETO_ORCHESTRATOR.md  COMO_EJECUTAR.txt  DEPLOYMENT_GUIA.md  DEPLOYMENT_MANIFEST.md  DEPLOYMENT_READY_SUMMARY.txt  DEPLOY_LOG_STAGING.md  DESPLIEGUE_PASO_A_PASO.md  Dockerfile  EMAIL_INTEGRATION.md  GUIA_RAPIDA_DESPLIEGUE.md  INDICE_COMPLETO.md  OPERATIONS_RUNBOOK.md  PERMISSIONS_LOG.md  PHASE_1_STATUS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  PRUEBAS_FINALES_LOCALES.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_PRODUCCION.md  README_PROJECT_STATUS.md  SKILLS_DOWNLOAD_LINKS.md  START.py  TASK_5_FINAL_STATUS.md  TASK_5_REPORT.md  TASK_5_VALIDATION.md  TASK_6_FINAL_STATUS.md  TASK_6_TEST_EXPANSION_REPORT.md  TASK_7_FINAL_STATUS.md  (+16 more)
.claude/: settings.json
.claude/commands/: close-lot.md  deploy-staging.md  expand-tests.md  fix-taxonomy.md  fix-worker.md  migrate-llm-provider.md
.claude/skills/: SKILLS_SETUP.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_conversation_state_payload.py
app/: main.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/domain/: conversation_state.py
app/schemas/: common.py  lead.py  tenant.py  webhook.py
app/services/: llm_client.py  message_processor.py  tenant_service.py
app/tests/: conftest.py
tenants/: vitaclinica-setup.ps1
(+55 files in other folders)
